src/objects/FinancialAccount__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Account_Number__c</fullName>
        <description>ACH account number</description>
        <label>ACH_Account_Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACH_Account_Type__c</fullName>
        <description>ACH account type</description>
        <label>ACH_Account_Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACH_Current_Effective_Date__c</fullName>
        <description>Current effective date for ACH accounts</description>
        <label>ACH_Current_Effective_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACH_Original_Effective_Date__c</fullName>
        <description>Original effective date for ACH accounts</description>
        <label>ACH_Original_Effective_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACH_Payment_Date_Next__c</fullName>
        <description>Next ACH due date</description>
        <label>ACH_Payment_Date_Next</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACH_Routing_Number__c</fullName>
        <description>ACH routing number</description>
        <label>ACH_Routing_Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Marketing_Source__c</fullName>
        <description>Affiliate Marketing  Source Flag</description>
        <label>Affiliate_Marketing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Sharing_Source__c</fullName>
        <description>Affiliate Sharing Source Flag</description>
        <label>Affiliate_Sharing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Sharing__c</fullName>
        <description>Affiliate Sharing Flag</description>
        <label>Affiliate_Sharing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balloon_Code__c</fullName>
        <description>Type of Loan</description>
        <label>Balloon_Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Description__c</fullName>
        <description>To be provided by TFS</description>
        <label>Bankruptcy_Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>bankruptcy flag</description>
        <label>Bankruptcy_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BranchId__c</fullName>
        <description>Id of Branch</description>
        <label>BranchId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Of_Finance_Account_Number__c</fullName>
        <description>Charge-Off Account Number</description>
        <label>Charge_Of_Finance_Account_Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_PerDiem_Total__c</fullName>
        <description>Total charge amount</description>
        <label>Charge_PerDiem_Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charges_Late__c</fullName>
        <description>Late charges</description>
        <label>Charges_Late</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charges_Miscellaneous__c</fullName>
        <description>Miscellaneous Charges</description>
        <label>Charges_Miscellaneous</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Code__c</fullName>
        <description>Account Status</description>
        <label>Close_Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Edit_Message__c</fullName>
        <description>Edit message code</description>
        <label>Code_Edit_Message</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Primary_Note__c</fullName>
        <description>Permanent notes</description>
        <label>Collection_Primary_Note</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Type__c</fullName>
        <label>Consumer_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <description>&quot;Lease: The date the lease contract was signed</description>
        <label>Contract_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Counter_Payments_Remaining__c</fullName>
        <description>Payments remain</description>
        <label>Counter_Payments_Remaining</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>&quot;Lease: Lease number</description>
        <label>Customer_Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Number__c</fullName>
        <description>&quot;Lease: Dealer number</description>
        <label>Dealership_Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Type__c</fullName>
        <label>Dealership_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <description>Id of Dealership</description>
        <label>Dealership</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_Message_Description__c</fullName>
        <description>To be provided by TFS</description>
        <label>Edit_Message_Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expired_Term__c</fullName>
        <description>Expired term</description>
        <label>Expired_Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Deferment_Assessed__c</fullName>
        <description>assessed deferred fee - value zero</description>
        <label>Fee_Deferment_Assessed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Deferment_Last_Date__c</fullName>
        <description>Last defer date</description>
        <label>Fee_Deferment_Last_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Deferment_Paid__c</fullName>
        <description>paid deferred fee - value zero</description>
        <label>Fee_Deferment_Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Deferment_Waived__c</fullName>
        <description>waived deferred fee - value zero</description>
        <label>Fee_Deferment_Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Deferment_Zero_Value__c</fullName>
        <description>deferred fee - value zero</description>
        <label>Fee_Deferment_Zero_Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Account_Archive_Type__c</fullName>
        <label>Finance_Account_Archive_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Account_Number__c</fullName>
        <description>unique for Finance Account (Alternate key)</description>
        <label>Finance_Account_Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Account_Product_Type__c</fullName>
        <label>Finance_Account_Product_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Account_Status__c</fullName>
        <label>Finance_Account_Status</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Account_Type__c</fullName>
        <label>Finance_Account_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_Account_Statement_Request__c</fullName>
        <description>Account statement request flag</description>
        <label>Flag_Account_Statement_Request</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Auto_Clearing_House__c</fullName>
        <description>ACH indicator</description>
        <label>Flag_Auto_Clearing_House</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Bill_Statement_Request__c</fullName>
        <description>Bill statement request flag</description>
        <label>Flag_Bill_Statement_Request</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Encore_Eligible__c</fullName>
        <description>&quot;Lease: If number of payments made is more than 8 then this flag is true otherwise false.</description>
        <label>Flag_Encore_Eligible</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Federal_Do_Not_Call__c</fullName>
        <description>Federal Do Not Call Flag</description>
        <label>Flag_Federal_Do_Not_Call</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Insurance__c</fullName>
        <description>Insurance indicator</description>
        <label>Flag_Insurance</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Military_Status__c</fullName>
        <description>Military Flag</description>
        <label>Flag_Military_Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_OFSC__c</fullName>
        <description>OFSC indicator</description>
        <label>Flag_OFSC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Office_Of_Foreign_Asset_Control__c</fullName>
        <description>OFAC Flag</description>
        <label>Flag_Office_Of_Foreign_Asset_Control</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_SCRA_Status__c</fullName>
        <description>SCRA Flag</description>
        <label>Flag_SCRA_Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Special_Handling__c</fullName>
        <description>Special Handling Flag_</description>
        <label>Flag_Special_Handling</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_State_DoNotCall__c</fullName>
        <description>State Do Not Call Flag</description>
        <label>Flag_State_DoNotCall</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Thirty_Plus_Days_Delinquant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>30 days delinquency flag</description>
        <label>Flag_Thirty_Plus_Days_Delinquant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Vehicle_Low_Mileage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>low mileage indicator</description>
        <label>Flag_Vehicle_Low_Mileage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Vehicle_Reposession__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Repossession indicator</description>
        <label>Flag_Vehicle_Reposession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Voice_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Voice quote indicator which is always set</description>
        <label>Flag_Voice_Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Good_Through_Date__c</fullName>
        <description>Good through date</description>
        <label>Good_Through_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>History_Counter_Days_Past_Due__c</fullName>
        <description>&quot;DPD</description>
        <label>History_Counter_Days_Past_Due</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Description__c</fullName>
        <description>To be provided by TFS</description>
        <label>Insurance_Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Assessed__c</fullName>
        <description>Assessed late charge</description>
        <label>Late_Charge_Assessed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Paid__c</fullName>
        <description>Late Charges Paid</description>
        <label>Late_Charge_Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Waived__c</fullName>
        <description>Late Charges Waived</description>
        <label>Late_Charge_Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Base_Rent__c</fullName>
        <description>Base rent</description>
        <label>Lease_Base_Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Branch_Number__c</fullName>
        <description>Branch number</description>
        <label>Lease_Branch_Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Contract_Time_Amount__c</fullName>
        <description>Amount in time of contract</description>
        <label>Lease_Contract_Time_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Date__c</fullName>
        <description>Lease effective date</description>
        <label>Lease_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Late_Charge_Waived_Amount_To_Date__c</fullName>
        <description>&quot;Lease_ late charge waived Lease_ to date</description>
        <label>Lease_Late_Charge_Waived_Amount_To_Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_Total_Rent__c</fullName>
        <description>Lease_ payment total rent</description>
        <label>Lease_Payment_Total_Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payoff_Amount_Gross__c</fullName>
        <description>Payoff amount</description>
        <label>Lease_Payoff_Amount_Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payoff_Amount_Quote__c</fullName>
        <description>Payoff amount</description>
        <label>Lease_Payoff_Amount_Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payoff_Amount__c</fullName>
        <description>Payoff amount</description>
        <label>Lease_Payoff_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Residual_End_of_Term_Amount__c</fullName>
        <description>Lease_ residual end-of-term amount</description>
        <label>Lease_Residual_End_of_Term_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_State__c</fullName>
        <description>State of the customer address (tax related)</description>
        <label>Lease_State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_TermType__c</fullName>
        <description>Lease termination Type</description>
        <label>Lease_TermType</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Termination_Date__c</fullName>
        <description>Lease termination date</description>
        <label>Lease_Termination_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <description>Lease type</description>
        <label>Lease_Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Original__c</fullName>
        <description>Original amount</description>
        <label>Loan_Amount_Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Current_Amount__c</fullName>
        <description>Current amount</description>
        <label>Loan_Current_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Date_Interest_To_Contract__c</fullName>
        <description>Interest contract to date</description>
        <label>Loan_Date_Interest_To_Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Due_Date_Change__c</fullName>
        <description>Due date change</description>
        <label>Loan_Due_Date_Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Interest_Paid__c</fullName>
        <description>Interest paid</description>
        <label>Loan_Interest_Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Interest_Rebate__c</fullName>
        <description>Interest rebate</description>
        <label>Loan_Interest_Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Maturity_Date__c</fullName>
        <description>Maturity date Loan maturity date</description>
        <label>Loan_Maturity_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Original_Term__c</fullName>
        <description>Original term</description>
        <label>Loan_Original_Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Over_Payment_Amount__c</fullName>
        <description>Over payment</description>
        <label>Loan_Over_Payment_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Total_Interest_Paid__c</fullName>
        <description>Total interest paid</description>
        <label>Loan_Total_Interest_Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_TypeCode__c</fullName>
        <description>&quot;Loan type code (simple</description>
        <label>Loan_TypeCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <description>Loan type</description>
        <label>Loan_Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <description>Maturity date</description>
        <label>Maturity_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message_Code1__c</fullName>
        <description>Message code</description>
        <label>Message_Code1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Code2__c</fullName>
        <description>Message code</description>
        <label>Message_Code2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Code3__c</fullName>
        <description>Message code</description>
        <label>Message_Code3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Sharing_Source__c</fullName>
        <description>Third Party Sharing Source Flag</description>
        <label>Party_Sharing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayOff_Bank_Rebate_Amount__c</fullName>
        <description>Pay off bank rebate</description>
        <label>PayOff_Bank_Rebate_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PayOff_Dealership_Rebate_Amount__c</fullName>
        <description>Pay off dealer rebate</description>
        <label>PayOff_Dealership_Rebate_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_ACH__c</fullName>
        <description>ACH payment amount</description>
        <label>Payment_Amount_ACH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Balloon__c</fullName>
        <description>Payment Amount</description>
        <label>Payment_Amount_Balloon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last1__c</fullName>
        <label>Payment_Amount_Last1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last2__c</fullName>
        <label>Payment_Amount_Last2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last3__c</fullName>
        <label>Payment_Amount_Last3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Next__c</fullName>
        <description>Next due payment amount</description>
        <label>Payment_Amount_Next</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Past_Due__c</fullName>
        <description>Past due amount</description>
        <label>Payment_Amount_Past_Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Scheduled__c</fullName>
        <description>Payment Amount</description>
        <label>Payment_Amount_Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date_First__c</fullName>
        <description>First payment date</description>
        <label>Payment_Date_First</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last1__c</fullName>
        <label>Payment_Date_Last1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last2__c</fullName>
        <label>Payment_Date_Last2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last3__c</fullName>
        <label>Payment_Date_Last3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last_Extension__c</fullName>
        <description>Last Extension Date</description>
        <label>Payment_Date_Last_Extension</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Next__c</fullName>
        <description>next due payment date</description>
        <label>Payment_Date_Next</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Past_Due__c</fullName>
        <description>Past due date</description>
        <label>Payment_Date_Past_Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Depreciation_Amount__c</fullName>
        <description>Lease payment depreciation amount</description>
        <label>Payment_Depreciation_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Assessed__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment_Extension_Fee_Assessed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Deferred__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment_Extension_Fee_Deferred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Paid__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment_Extension_Fee_Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Waived__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment_Extension_Fee_Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment_Extension_Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Income_Amount__c</fullName>
        <description>Lease payment income amount</description>
        <label>Payment_Income_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Insurance_Amount__c</fullName>
        <description>Lease payment insurance amount</description>
        <label>Payment_Insurance_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Last_Extension_Date__c</fullName>
        <description>Extension date</description>
        <label>Payment_Last_Extension_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Lease_Maintenance_Amount__c</fullName>
        <description>Lease payment maintenance amount</description>
        <label>Payment_Lease_Maintenance_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Partial_Amount__c</fullName>
        <description>Payment amount</description>
        <label>Payment_Partial_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Remaining__c</fullName>
        <description>Remaining payment term</description>
        <label>Payment_Term_Remaining</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount_Gross__c</fullName>
        <description>payoff amount</description>
        <label>Payoff_Amount_Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount_Net__c</fullName>
        <description>Payoff Amount</description>
        <label>Payoff_Amount_Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount__c</fullName>
        <description>payoff amount</description>
        <label>Payoff_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Good_Thru_Date__c</fullName>
        <description>Good through date</description>
        <label>Payoff_Good_Thru_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Marketing__c</fullName>
        <description>Affiliate Marketing Flag</description>
        <label>Privacy_Election_Affiliate_Marketing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Sharing__c</fullName>
        <description>Affiliate Sharing Flag</description>
        <label>Privacy_Election_Affiliate_Sharing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Dealership_Source__c</fullName>
        <description>Dealer Privacy Source Flag</description>
        <label>Privacy_Election_Dealership_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Dealership__c</fullName>
        <description>Dealer Privacy Flag</description>
        <label>Privacy_Election_Dealership</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing_Source__c</fullName>
        <description>FCRA Sharing Source Flag</description>
        <label>Privacy_Election_FCRA_Sharing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing__c</fullName>
        <description>FCRA Sharing Flag</description>
        <label>Privacy_Election_FCRA_Sharing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing_Source__c</fullName>
        <description>Telemarketing Source Flag</description>
        <label>Privacy_Election_Telemarketing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing__c</fullName>
        <description>Telemarketing Flag</description>
        <label>Privacy_Election_Telemarketing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Third_Party_Sharing__c</fullName>
        <description>Third Party Sharing Flag</description>
        <label>Privacy_Election_Third_Party_Sharing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_State_Code__c</fullName>
        <description>Privacy State Code</description>
        <label>Privacy_State_Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Option_Amount__c</fullName>
        <description>Purchase option</description>
        <label>Purchase_Option_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recovery_Code__c</fullName>
        <label>Recovery_Code</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recovery_Description__c</fullName>
        <description>To be provided by TFS</description>
        <label>Recovery_Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Number__c</fullName>
        <description>Region number</description>
        <label>Region_Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Branch_Number__c</fullName>
        <description>Branch Number and DSSO Name</description>
        <label>Retail_Branch_Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reversal_Code__c</fullName>
        <description>Reversal code</description>
        <label>Reversal_Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Strategy_Code__c</fullName>
        <label>Risk_Strategy_Code</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>